@@ -1,5 +1,16 @@
 Version: $Id$ $Name$
 
+purple (12/10/05)
+-----------------
++ Split a lot of charProfileStruct out into playerProfileStruct
++ Added opcode OP_Shroud for when someone shrouds when you're in the zone
+	or you shroud yourself
++ Added a SpawnShell handler for OP_Shroud so that it properly see 
+	all the spawn changes when a spawn shrouds for both you shrouding
+	and others shrouding
++ Added an ItemDB handler for OP_Shroud so that it properly sees items
+	that come across when you shroud yourself
+
 purple (12/08/05)
 -----------------
 + Updated version to 5.2.4.0
